--- a/index-2.html
+++ b/index-2.html
@@ -9,7 +9,12 @@
         <p id="sum-el">Sum:</p>
         <button onclick="startGame()" >START GAME</button>
         <button onclick="newCard()">NEW CARD</button>
+        <p id="player-el"></p>         
         <script src="style-2.js"></script>
     </body>
 </html>
 
+
+
+
+<!--  -->
